--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    /* bg-gradient-to-br from-white to-blue-50 */
+    background: linear-gradient(to bottom right, white, rgb(179, 208, 255));
+    min-height: 100dvh;
+    /* overflow: hidden; */
+}
