--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 
 body {
     /* bg-gradient-to-br from-white to-blue-50 */
-    background: linear-gradient(to bottom right, white, rgb(179, 208, 255));
+    background: linear-gradient(to bottom,
+            #fff 0%,
+            #d6e6ff 50%,
+            #fff 100%);
     min-height: 100dvh;
     /* overflow: hidden; */
 }
